unfinished row parse.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,6 @@
 eclipse.preferences.version=1
+encoding//mysqlsub/column.py=utf-8
+encoding//mysqlsub/connection.py=utf-8
+encoding//mysqlsub/event.py=utf-8
+encoding//mysqlsub/source.py=utf-8
 encoding/<project>=UTF-8
